# dcds-500-project-2

./: .gitignore  project-2-results-updated.csv  project2_results.csv  project2_results.txt  pyproject.toml
model/: accounts.py  analysis.ipynb  consumer.py  exploration.ipynb  main.py  mechanisms.py  shopping_environment.py
