[tool.poetry]
name = "dcds-500-project-2"
version = "0.1.0"
description = ""
authors = ["Lydia Reader <lydia.reader@wustl.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
pandas = "^1.4.2"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
